--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -3,19 +3,27 @@
         <span class="fill-remaining-space"></span>
         <span>Pagina do Adm - Cadastro</span>
         <span class="fill-remaining-space"></span>
-        
+
     </mat-toolbar>
     <mat-tab-group>
-    
-            <mat-tab label="Cadastro de Usuários"> 
-                    <app-usuario></app-usuario>
-            </mat-tab>
-    
-            <mat-tab label="Areas"> <app-area></app-area></mat-tab>
-            <mat-tab label="Cursos"> <app-curso></app-curso> </mat-tab>
-            <mat-tab label="Departamento"> <app-departamento></app-departamento> </mat-tab>
-            <mat-tab label="Questões"> <app-questao></app-questao> </mat-tab>
-            
-          </mat-tab-group>
-    
+
+        <mat-tab label="Cadastro de Usuários">
+            <app-usuario></app-usuario>
+        </mat-tab>
+
+        <mat-tab label="Areas">
+            <app-area></app-area>
+        </mat-tab>
+        <mat-tab label="Departamento">
+            <app-departamento></app-departamento>
+        </mat-tab>
+        <mat-tab label="Curso">
+            <app-curso></app-curso>
+        </mat-tab>
+        <mat-tab label="Questões">
+            <app-questao></app-questao>
+        </mat-tab>
+
+    </mat-tab-group>
+
 </div>
