--- a/src/app/reitor/reitor.component.html
+++ b/src/app/reitor/reitor.component.html
@@ -1,13 +1,8 @@
-
 <mat-card>
-<div >
-    <div fxLayoutAlign="center center" style="width: 80%; height: 80%;">
-        <canvas baseChart
-            [datasets]="barChartData"
-            [labels]="barChartLabels"
-            [options]="barChartOptions"
-            [legend]="barChartLegend"
-            [chartType]="barChartType"></canvas>
+    <div>
+        <div fxLayoutAlign="center center" style="width: 80%; height: 80%;">
+            <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+                [legend]="barChartLegend" [chartType]="barChartType"></canvas>
+        </div>
     </div>
-</div>
 </mat-card>
