--- a/src/app/usuarios/area/area.component.html
+++ b/src/app/usuarios/area/area.component.html
@@ -1,23 +1,22 @@
 <mat-grid-list cols="3" rowHeight="700px">
-        <form [formGroup]="service.form" class="normal-form">
-            <mat-grid-list cols="3" rowHeight="300px">
-        
-                 <mat-grid-tile>
-                   <div class="controles-container">
-        
-                        <input type="hidden" formControlName="$key">
-                        <mat-form-field>
-                            <input formControlName="nome" matInput placeholder="Nome*">
-                            <mat-error>Esse campo é obrigatório</mat-error>
-                        </mat-form-field>
-                        
-                        <div class="button-row">
-                                <button mat-raised-button color="primary" type="submit" [disabled]="service.form.invalid">Cadastrar</button>
-                            </div>
+    <form [formGroup]="service.form" class="normal-form">
+        <mat-grid-list cols="3" rowHeight="300px">
+
+            <mat-grid-tile>
+                <div class="controles-container">
+
+                    <input type="hidden" formControlName="$key">
+                    <mat-form-field>
+                        <input formControlName="nome" matInput placeholder="Nome*">
+                        <mat-error>Esse campo é obrigatório</mat-error>
+                    </mat-form-field>
+
+                    <div class="button-row">
+                        <button mat-raised-button color="primary" type="submit"
+                            [disabled]="service.form.invalid">Cadastrar</button>
                     </div>
-                </mat-grid-tile>
-            </mat-grid-list>
-        </form>
+                </div>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </form>
 </mat-grid-list>
-    
-    
