--- a/src/app/usuarios/questao/questao.component.html
+++ b/src/app/usuarios/questao/questao.component.html
@@ -1,67 +1,74 @@
 <mat-grid-list cols="3" rowHeight="700px">
         <form [formGroup]="service.form" class="normal-form">
-            <mat-grid-list cols="3" rowHeight="500px">
-        
-                 <mat-grid-tile>
-                   <div class="controles-container">
-        
-                        <input type="hidden" formControlName="$key">
-                        
-                        <mat-form-field>
-                            <textarea formControlName="pergunta" matInput placeholder="Pergunta"></textarea>
-                        </mat-form-field>
+                <mat-grid-list cols="3" rowHeight="700px">
 
-                        
-                    </div>
-                </mat-grid-tile>
-                <mat-grid-tile>
-                        <div class="controles-container">
-                                <mat-form-field>
-                                        <input formControlName="opcao_a" matInput placeholder="Opção A">
-                                    </mat-form-field>
-                                <mat-form-field>
-                                        <input formControlName="opcao_b" matInput placeholder="Opção B">
-                                </mat-form-field>
-                                <mat-form-field>
-                                        <input formControlName="opcao_c" matInput placeholder="Opção C">
-                                </mat-form-field>
-                                <mat-form-field>
-                                         <input formControlName="opcao_d" matInput placeholder="Opção D">
-                                </mat-form-field>
-                                <mat-form-field>
-                                        <input formControlName="opcao_e" matInput placeholder="Opção E">
-                               </mat-form-field>
-                                                            
-                             
-                         </div>
-                     </mat-grid-tile>
-                     <mat-grid-tile>
-                            <div class="controles-container">
-                                             
-                                    <mat-form-field>
-                                            <input formControlName="tipo" matInput placeholder="Tipo da Prova">
-                                    </mat-form-field>         
-                                    <mat-form-field>
-                                            <input formControlName="ano_da_prova" matInput placeholder="Ano da Prova">
-                                    </mat-form-field>         
-                                    <mat-form-field>
-                                            <input formControlName="gabarito" matInput placeholder="Gabarito">
-                                    </mat-form-field>     
-                                    <p>Resposta </p>
-                                    <mat-radio-group formControlName="gender">
-                                        <mat-radio-button value="1">A</mat-radio-button>
-                                        <mat-radio-button value="2">B</mat-radio-button>
-                                        <mat-radio-button value="3">C</mat-radio-button>
-                                        <mat-radio-button value="4">D</mat-radio-button>
-                                        <mat-radio-button value="5">E</mat-radio-button>
-                                    </mat-radio-group>                                      
-                                 
-                                 <div class="button-row">
-                                         <button mat-raised-button color="primary" type="submit" [disabled]="service.form.invalid">Cadastrar</button>
-                                     </div>
-                             </div>
-                         </mat-grid-tile>
-            </mat-grid-list>
+                        <mat-grid-tile>
+                                <div class="controles-container">
+
+                                        <input type="hidden" formControlName="$key">
+
+                                        <mat-form-field>
+                                                <textarea formControlName="pergunta " rows="20" matInput
+                                                        placeholder="Pergunta"></textarea>
+                                        </mat-form-field>
+
+
+                                </div>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                                <div class="controles-container">
+                                        <mat-form-field>
+                                                <textarea formControlName="opcao_a " rows="3" matInput
+                                                        placeholder="Opção A"></textarea>
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <textarea formControlName="opcao_b " rows="3" matInput
+                                                        placeholder="Opção B"></textarea>
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <textarea formControlName="opcao_c " rows="3" matInput
+                                                        placeholder="Opção C"></textarea>
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <textarea formControlName="opcao_d " rows="3" matInput
+                                                        placeholder="Opção D"></textarea>
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <textarea formControlName="opcao_e " rows="3" matInput
+                                                        placeholder="Opção E"></textarea>
+                                        </mat-form-field>
+
+
+                                </div>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                                <div class="controles-container">
+
+                                        <mat-form-field>
+                                                <input formControlName="tipo" matInput placeholder="Tipo da Prova">
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <input formControlName="ano_da_prova" matInput
+                                                        placeholder="Ano da Prova">
+                                        </mat-form-field>
+                                        <mat-form-field>
+                                                <input formControlName="gabarito" matInput placeholder="Gabarito">
+                                        </mat-form-field>
+                                        <p>Resposta </p>
+                                        <mat-radio-group formControlName="gender">
+                                                <mat-radio-button value="1">A</mat-radio-button>
+                                                <mat-radio-button value="2">B</mat-radio-button>
+                                                <mat-radio-button value="3">C</mat-radio-button>
+                                                <mat-radio-button value="4">D</mat-radio-button>
+                                                <mat-radio-button value="5">E</mat-radio-button>
+                                        </mat-radio-group>
+
+                                        <div class="button-row">
+                                                <button mat-raised-button color="primary" type="submit"
+                                                        [disabled]="service.form.invalid">Cadastrar</button>
+                                        </div>
+                                </div>
+                        </mat-grid-tile>
+                </mat-grid-list>
         </form>
 </mat-grid-list>
-    
