--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,9 +1,8 @@
-
 <form [formGroup]="service.form" class="normal-form">
     <mat-grid-list cols="2" rowHeight="700px">
 
-         <mat-grid-tile>
-           <div class="controles-container">
+        <mat-grid-tile>
+            <div class="controles-container">
 
                 <input type="hidden" formControlName="$key">
                 <mat-form-field>
@@ -16,15 +15,19 @@
                 </mat-form-field>
                 <mat-form-field>
                     <input formControlName="celular" matInput placeholder="Celular*">
-                    <mat-error *ngIf="service.form.controls['telefone'].errors?.required">Esse é um campo obrigatório</mat-error>
-                    <mat-error *ngIf="service.form.controls['telefone'].errors?.minLength">Lembre-se do DD começando com 0</mat-error>
+                    <mat-error *ngIf="service.form.controls['telefone'].errors?.required">Esse é um campo obrigatório
+                    </mat-error>
+                    <mat-error *ngIf="service.form.controls['telefone'].errors?.minLength">Lembre-se do DD começando com
+                        0</mat-error>
                 </mat-form-field>
                 <mat-form-field>
                     <input formControlName="telefone" matInput placeholder="Telefone*">
-                    <mat-error *ngIf="service.form.controls['telefone'].errors?.minLength">Lembre-se do DD começando com 0</mat-error>
+                    <mat-error *ngIf="service.form.controls['telefone'].errors?.minLength">Lembre-se do DD começando com
+                        0</mat-error>
                 </mat-form-field>
                 <mat-form-field>
-                    <input formControlName="hireDate" matInput [matDatepicker]="picker" placeholder="Data de nascimento">
+                    <input formControlName="hireDate" matInput [matDatepicker]="picker"
+                        placeholder="Data de nascimento">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
@@ -36,60 +39,57 @@
                         <mat-radio-button value="3">Outro</mat-radio-button>
                     </mat-radio-group>
                 </div>
-                 <mat-form-field>
-                            <input formControlName="email" matInput placeholder="Email">
-                    </mat-form-field>
-                    <mat-form-field>
-                            <input formControlName="senha" matInput placeholder="Senha">
-                    </mat-form-field>
-                    
+                <mat-form-field>
+                    <input formControlName="email" matInput placeholder="Email">
+                </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="senha" matInput placeholder="Senha">
+                </mat-form-field>
+
 
             </div>
         </mat-grid-tile>
         <mat-grid-tile>
-                <div class="controles-container">
+            <div class="controles-container">
 
-                    <mat-form-field>
-                        <input formControlName="cidade" matInput placeholder="Cidade">
-                    </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="cidade" matInput placeholder="Cidade">
+                </mat-form-field>
 
-                    <mat-form-field>
-                            <mat-select formControlName="estado" placeholder="Estado">
-                                <ng-container *ngFor = "let estado of estados">
-                                    <mat-option value="{{estado.id}}">{{estado.value}}</mat-option>
-                                </ng-container>
-                            </mat-select>
-                        </mat-form-field>
-                    <mat-form-field>
-                        <input formControlName="bairro" matInput placeholder="Bairro">
-                    </mat-form-field>
+                <mat-form-field>
+                    <mat-select formControlName="estado" placeholder="Estado">
+                        <ng-container *ngFor="let estado of estados">
+                            <mat-option value="{{estado.id}}">{{estado.value}}</mat-option>
+                        </ng-container>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="bairro" matInput placeholder="Bairro">
+                </mat-form-field>
 
-                    <mat-form-field>
-                        <input formControlName="logradouro" matInput placeholder="Logradouro">
-                    </mat-form-field>
-                    <mat-form-field>
-                        <input formControlName="complemento" matInput placeholder="Complemento">
-                    </mat-form-field>
-                    <mat-form-field>
-                        <input formControlName="numero" matInput placeholder="Numero">
-                    </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="logradouro" matInput placeholder="Logradouro">
+                </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="complemento" matInput placeholder="Complemento">
+                </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="numero" matInput placeholder="Numero">
+                </mat-form-field>
 
-                        <mat-form-field>
-                            <mat-select formControlName="department" placeholder="Tipo de Usuário">
-                                <ng-container *ngFor = "let ocupacao of ocupacoes">
-                                    <mat-option value="{{ocupacao.id}}">{{ocupacao.value}}</mat-option>
-                                </ng-container>
-                            </mat-select>
-                        </mat-form-field>
-
-                      <!--  <div class ="add-bottom-padding">
-                            <mat-checkbox formControlName="isPermanent">Antonio é gay?</mat-checkbox>
-                        </div>-->
-                        <div class="button-row">
-                            <button mat-raised-button color="primary" type="submit" [disabled]="service.form.invalid">Cadastrar</button>
-                            <button mat-raised-button color="warn" (click)="onClear()">Limpar</button>
-                        </div>
-                    </div>
+                <mat-form-field>
+                    <mat-select formControlName="department" placeholder="Tipo de Usuário">
+                        <ng-container *ngFor="let ocupacao of ocupacoes">
+                            <mat-option value="{{ocupacao.id}}">{{ocupacao.value}}</mat-option>
+                        </ng-container>
+                    </mat-select>
+                </mat-form-field>
+                <div class="button-row">
+                    <button mat-raised-button color="primary" type="submit"
+                        [disabled]="service.form.invalid">Cadastrar</button>
+                    <button mat-raised-button color="warn" (click)="onClear()">Limpar</button>
+                </div>
+            </div>
         </mat-grid-tile>
 
     </mat-grid-list>
