--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -7,19 +7,34 @@
     </mat-toolbar>
     <mat-tab-group>
 
-        <mat-tab label="Cadastro de Usuários">
-            <app-usuario></app-usuario>
+        <mat-tab label="Cadastro de Administrador">
+            <app-admnistrador></app-admnistrador>
+        </mat-tab>
+
+        <mat-tab label="Cadastro de Aluno">
+                <app-aluno></app-aluno>
+        </mat-tab>
+
+        <mat-tab label="Cadastro de Professor">
+                <app-professor></app-professor>
+        </mat-tab>
+
+        <mat-tab label="Cadastro de Pro-reitor">
+                <app-proreitor></app-proreitor>
         </mat-tab>
 
         <mat-tab label="Areas">
             <app-area></app-area>
         </mat-tab>
+
         <mat-tab label="Departamento">
             <app-departamento></app-departamento>
         </mat-tab>
+
         <mat-tab label="Curso">
             <app-curso></app-curso>
         </mat-tab>
+    
         <mat-tab label="Questões">
             <app-questao></app-questao>
         </mat-tab>
