--- a/src/app/usuarios/proreitor/proreitor.component.html
+++ b/src/app/usuarios/proreitor/proreitor.component.html
@@ -85,7 +85,7 @@
             
                                 <mat-form-field>
                                     <input formControlName="data_admissao" matInput [matDatepicker]="picker1"
-                                        placeholder="Data de designação">
+                                        placeholder="Data de admissao">
                                     <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                                     <mat-datepicker #picker1></mat-datepicker>
                                 </mat-form-field>
