--- a/src/app/usuarios/admnistrador/admnistrador.component.html
+++ b/src/app/usuarios/admnistrador/admnistrador.component.html
@@ -90,7 +90,7 @@
                                  
                                 <mat-form-field>
                                         <input formControlName="data_admissao" matInput [matDatepicker]="picker2"
-                                            placeholder="Data de designação">
+                                            placeholder="Data de admissao">
                                         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                                         <mat-datepicker #picker2></mat-datepicker>
                                     </mat-form-field>
